--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
+  font-family: "Raleway", serif;
+}
