--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@ body {
   scroll-behavior: smooth;
   font-family: "Raleway", serif;
 }
+
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  transition: top 0.3s ease;
+}
